<resources>
    <string name="app_name">Tic-Tac-Toe Game</string>

    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="cross">User</string>
    <string name="naught">Computer</string>
    <string name="start">Start</string>
    <string name="reset">Reset</string>
    <string name="winnable">Winnable</string>
    <string name="playerInfo">X - player</string>
    <string name="computerInfo">O - computer</string>

    <string name="action_contactus">Contact Us</string>
    <string name="action_aboutus">About Us</string>
    <string name="action_exit_app">Exit</string>
</resources>
