<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    tools:context=".MainActivity">

    <item android:id="@+id/winnable"
        android:title="@string/winnable"
        android:checkable="true"
        android:checked="false"
        app:showAsAction="never"/>
    <item
        android:id="@+id/id_exit_app_home"
        android:icon="@drawable/ic_exit_to_app_black_24dp"
        android:orderInCategory="100"
        android:title="@string/action_exit_app"
        app:showAsAction="always" />

    <item
        android:id="@+id/id_about_using"
        android:orderInCategory="100"
        android:icon="@drawable/ic_info_black_24dp"
        android:title="@string/action_aboutus"
        app:showAsAction="never" />
</menu>
