<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.idoston.tic_tac_toe_game.MainActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text=""
        android:textSize="25dp"/>

    <RadioGroup
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:checkedButton="@+id/cross"
        android:paddingLeft="100dp"
        android:orientation="horizontal"
        >

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/cross"

            android:id="@+id/cross" />

        <RadioButton
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/naught"
            android:id="@+id/naught" />
    </RadioGroup>
    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/start"
        android:id="@+id/start"
        android:textAllCaps="false"
        android:layout_gravity="center"
        />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/text"
        android:layout_gravity="center"
        />
    <TableLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingRight="15dp"
        android:layout_marginTop="5dp">
        <TableRow android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="fill_parent">
            <Button
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:id="@+id/button1"
                android:textSize="50dp"
                android:layout_weight=".33"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:id="@+id/button2"
                android:textSize="50dp"
                android:layout_weight=".33"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:id="@+id/button3"
                android:textSize="50dp"
                android:layout_weight=".33"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="fill_parent">
            <Button
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:id="@+id/button4"
                android:textSize="50dp"
                android:layout_weight=".33"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:id="@+id/button5"
                android:textSize="50dp"
                android:layout_weight=".33"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:id="@+id/button6"
                android:textSize="50dp"
                android:layout_weight=".33"/>
        </TableRow>
        <TableRow android:layout_width="match_parent"
            android:padding="5dp"
            android:layout_height="fill_parent">
            <Button
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:id="@+id/button7"
                android:textSize="50dp"
                android:layout_weight=".33"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:id="@+id/button8"
                android:textSize="50dp"
                android:layout_weight=".33"
                />

            <Button
                android:layout_width="0dp"
                android:layout_height="90dp"
                android:id="@+id/button9"
                android:textSize="50dp"
                android:layout_weight=".33"/>
        </TableRow>
    </TableLayout>


    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/reset"
        android:id="@+id/reset"
        android:textAllCaps="false"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:layout_gravity="center"
        />
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textStyle="italic"
        android:text="@string/playerInfo"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textSize="15dp"
        android:textStyle="italic"
        android:text="@string/computerInfo"/>


</LinearLayout>
